--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Response Received!</h1>
-  <p>We will send a confirmation email when the change has been completed if you clicked accept.</p>
+  <p>We will send a confirmation email when your hours of operation have been updated.</p>
 </body>
 </html>
