nice accept page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Response Received!</h1>
-  <p>We will send a confirmation email when your hours of operation have been updated.</p>
+  <img src="accept.svg" />
+  <!-- <h1>Response Received!</h1>
+  <p>We will send a confirmation email when your hours of operation have been updated.</p> -->
 </body>
 </html>
